# aws-resource-manager

./: .gitignore  README.md  pyproject.toml
shared_infra/: app.py  makefile  pyproject.toml
shared_infra/cdk.out/: ResourceManager-Shared-Infra.assets.json  ResourceManager-Shared-Infra.template.json  manifest.json  tree.json
shared_infra/cdk.out/asset.af51c1487b327cefd8385903d795cd26c45b017b6dc67d2e73a9786dcf71e590/: index.py
shared_infra/sweeper/: index.py
