[tool.poetry]
name = "shared_infra"
version = "0.1.0"
description = ""
authors = ["Simon Coope <sjcoope@amazon.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aws-cdk-lib = "^2.49.0"
aws-cdk-aws-lambda-python-alpha = "^2.55.1a0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
